--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,57 +3,66 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/luncher_bg"
     android:orientation="horizontal"
     tools:context="com.nas.ns100luncher.activity.MainActivity">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_weight="3"
         android:gravity="center"
         android:orientation="horizontal">
 
-        <Button
+        <ImageButton
             android:id="@+id/bt_video"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/video_normal"
+            android:src="@drawable/video"
             android:text="视频" />
 
-        <Button
+        <ImageButton
             android:id="@+id/bt_picture"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_marginLeft="@dimen/activity_vertical_margin"
+            android:src="@drawable/picture"
             android:text="图片" />
 
-        <Button
+        <ImageButton
             android:id="@+id/bt_folder"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_marginLeft="@dimen/activity_vertical_margin"
+            android:src="@drawable/folder"
             android:text="文件夹" />
 
-        <Button
+        <ImageButton
             android:id="@+id/bt_set"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_marginLeft="@dimen/activity_vertical_margin"
+            android:src="@drawable/set"
             android:text="设置" />
 
-        <Button
+        <ImageButton
             android:id="@+id/bt_more"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_marginLeft="@dimen/activity_vertical_margin"
+            android:src="@drawable/more"
             android:text="更多" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
+        android:layout_weight="1"
         android:gravity="bottom"
         android:orientation="vertical">
 
@@ -73,13 +82,15 @@
                 android:id="@+id/tv_ip"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="IP:XXXXXXXXXXX" />
+                android:text="IP:XXXXXXXXXXX"
+                android:textColor="@android:color/white" />
 
             <TextView
                 android:id="@+id/tv_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="ID:XXXXXXXXXXX" />
+                android:text="ID:XXXXXXXXXXX"
+                android:textColor="@android:color/white" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
